feat - daily progress and food users
